Arquitectura hexagonal
Se refactorizo las carpetas y el codigo y se paso a arquitectura hexagonal, ademas, se realizaron las pruebas con testify
