# main.go
@@ -1,13 +1,19 @@
 package main
 
 import (
-	"car-api/internal/routes"
-	_ "github.com/arsmn/fiber-swagger/v2"
-	"github.com/gofiber/fiber/v2"
-	"github.com/gofiber/fiber/v2/middleware/recover"
-	// docs are generated by Swag CLI, you have to import them.
-	// replace with your own docs folder, usually "github.com/username/reponame/docs"
 	_ "car-api/docs"
+	"car-api/internal/core/services"
+	"car-api/internal/handler"
+	"car-api/internal/repository"
+	"car-api/internal/server"
+	"database/sql"
+	"fmt"
+	_ "github.com/arsmn/fiber-swagger/v2"
+	"github.com/kelseyhightower/envconfig"
+	_ "github.com/kelseyhightower/envconfig"
+	_ "github.com/lib/pq"
+	"log"
+	"time"
 )
 
 // @title Car API
@@ -24,43 +30,40 @@ import (
 // @BasePath /api
 func main() {
 
-	//Fiber config.
-	app := fiber.New(fiber.Config{
-		ErrorHandler: func(ctx *fiber.Ctx, err error) error {
-			// Status code defaults to 500
-			code := fiber.StatusInternalServerError
-			var msg string
-			// Retrieve the custom status code if it's an fiber.*Error
-			if e, ok := err.(*fiber.Error); ok {
-				code = e.Code
-				msg = e.Message
-			}
+	var cfg config
+	err := envconfig.Process("CAR", &cfg)
+	postgresUri := fmt.Sprintf("postgres://%s:%s@%s:%s/%s?sslmode=disable",
+		cfg.DbUser, cfg.DbPass, cfg.DbHost, cfg.DbPort, cfg.DbName)
 
-			if msg == "" {
-				msg = "cannot process the http call"
-			}
+	db, err := sql.Open("postgres", postgresUri)
 
-			// Send custom error page
-			err = ctx.Status(code).JSON(internalError{
-				Message: msg,
-			})
-			return nil
-		},
-	})
+	if err != nil {
+		log.Fatal(err)
+	}
 
-	key := "tokenKey"
-
-	app.Use(recover.New())
-
-	// Routes.
-	routes.UsersRouters(app, key)
-	routes.CarRouters(app, key)
-	routes.SwaggerRouters(app) // Register a route for API Docs (Swagger).
-
-	// Start server
-	_ = app.Listen(":8080")
+	userRepository := repository.NewUserRepository(db)
+	carRepository := repository.NewCarRepository(db)
+	//services
+	userService := services.NewUserService(userRepository)
+	carService := services.NewCarService(carRepository)
+	//handlers
+	userHandler := handler.NewUserHandler(userService)
+	carHandler := handler.NewCarHandler(carService)
+	//server
+	httpServer := server.NewServer(
+		userHandler,
+		carHandler,
+	)
+	httpServer.Initialize()
 }
 
-type internalError struct {
-	Message string `json:"message"`
+type config struct {
+
+	// Database configuration
+	DbUser    string        `default:"admin"`
+	DbPass    string        `default:"admin"`
+	DbHost    string        `default:"localhost"`
+	DbPort    string        `default:"5432"`
+	DbName    string        `default:"crudgo"`
+	DbTimeout time.Duration `default:"5s"`
 }
